--- a/index.html
+++ b/index.html
@@ -25,12 +25,22 @@
 
 <section>
   <img id="id_imagen_inicial" src="/img/pnegro.jpg" alt="Imagen de excadrill">
+  <div id="menu">
+  <div>
   <button id="id_keldeo" onclick="accion('keldeo-ordinary')">keldeo-ordinary</button>
+  </div>
+
+  <div>
   <button id="id_drilbur" onclick="accion('drilbur')">drilbur</button>
   <button id="id_ninjask" onclick="accion('ninjask')">ninjask</button>
+  </div>
+
+  <div>
   <button id="id_excadrill" onclick="accion('excadrill')">excadrill</button>
+  </div>
   <label id="id_mensaje" for=""></label>
   <button id="id_reiniciar" onclick="reiniciar()">Reiniciar</button>
+  </div>
 </section>
 
 <footer>
